--- a/Prash/css/style.css
+++ b/Prash/css/style.css
@@ -8,22 +8,40 @@ body {
   color: #000;
   background-color: #fff;
 }
-#all .container{
-    border: 2px solid black;
-    padding-top: 10px;
-    padding-bottom: 140px;
-    margin-bottom: 10px;
+.container {
+  margin-top: 5px;
+  padding-bottom: 40px;
+  background-color: #e2e5e5;
+  border: 2px solid #e2e5e5;
+  box-shadow: 0px 0px 8px #000;
+}
+#all .container {
+  border: 2px solid #e2e5e5;
+  padding-top: 0px;
+  padding-bottom: 140px;
+  margin-bottom: 10px;
+  background-color: #e2e5e5;
+  box-shadow: 0px 0px 8px #000;
 }
 /** HEADER **/
 #header-nav {
-  background-color: #6adbff;
+  background-color: #fff;
   border-radius: 0;
+  margin-bottom: 5px;
   border: 0;
-  padding-bottom: 40px;
+  padding-bottom: 0px;
+}
+.navbar-brand a:hover,
+.navbar-brand a:focus {
+  color: black;
+  text-decoration: none;
+}
+.navbar-brand a {
+  color: black;
 }
 .navbar-brand h1 {
   /* Form name */
-  color: #000;
+  /* color: #000; */
   font-size: 2em;
   text-shadow: 1px 1px 3px #000;
   margin-top: 0;
@@ -33,13 +51,13 @@ body {
 .navbar-brand p {
   color: #000;
   font-size: 1em;
-  margin-top: 12px;
+  margin-top: 14px;
   text-shadow: 1px 0px 0px #000;
 }
 
 .navbar-table a:hover {
   text-decoration: none;
-  background-color: blanchedalmond;
+  background-color: white;
   color: black;
   text-shadow: 1px 1px 1px #000;
 }
@@ -53,16 +71,16 @@ body {
   color: #000;
   float: right;
   font-size: 1.5em;
-  margin-top: 0;
+  margin-top: 10px;
   margin-bottom: 0;
   margin-right: 30px;
   line-height: 0.7;
   padding-top: 10px;
 }
 
-.navbar-form a:hover {
+/* .navbar-form a:hover {
   text-decoration: none;
-  background-color: blanchedalmond;
+  background-color: white;
   color: black;
   text-shadow: 1px 1px 1px #000;
 }
@@ -81,7 +99,7 @@ body {
   margin-bottom: 0;
   line-height: 0.7;
   padding-top: 10px;
-}
+} */
 /** BODY hEAD **/
 #body-head {
   position: absolute;
@@ -96,16 +114,16 @@ body {
 
 /** MAIN BODYYYYYYYYYYYYYYYYYYYYYY **/
 #main-content {
-  padding-top: 90px;
+  margin-top: 90px;
   /* padding-right: 200px; */
 }
 
 div.main {
-  box-shadow: 0px 0px 8px #6adbff;
-  width: 300px;
+  box-shadow: 0px 0px 5px #e2e5e5;
+  width: 350px;
   position: absolute;
   padding-top: 0px;
-  left: 150px;
+  left: 180px;
   transform: translate(-50%, -50%);
   vertical-align: left;
 }
@@ -116,8 +134,8 @@ label {
   font-size: 20px;
   margin: 10px;
   width: auto;
-  background-color: #fff;
-  border-color: #fff;
+  background-color: #e2e5e5;
+  border-color: #e2e5e5;
   -webkit-transition: top 0.2s ease-in-out, font-size 0.2s ease-in-out;
   transition: top 0.2s ease-in-out, font-size 0.2s ease-in-out;
 }
@@ -126,17 +144,19 @@ label {
     box-shadow: 0px 0px 8px #6adbff;
 } */
 .active {
+  border: 1.2px solid black;
+  box-shadow: 0px 0px 8px #000;
+  padding-left: 3px;
   font-style: "Oxygen", sans-serif;
   top: -25px;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 300px;
   letter-spacing: 2px;
   text-transform: uppercase;
-  
 }
 input[type="text"]:focus {
-  border-color: #6adbff;
-  box-shadow: 0px 0px 8px #6adbff;
+  border-color: #000;
+  box-shadow: 0px 0px 8px #000;
 }
 input[type="text"] {
   font-style: "Oxygen", sans-serif;
@@ -145,19 +165,19 @@ input[type="text"] {
   height: 50px;
   padding: 10px;
   border: 1.5px solid black;
+  box-shadow: 0px 0px 8px #e2e5e5;
   font-size: 20px;
   font-weight: 800;
-  background-color: #fff;
+  background-color: #e2e5e5;
   color: black;
 }
 
 /* input[type="text"]:focus {
   outline: none; */
-}
 .radio-inline {
   margin: 5px 40px 20px 0px;
   cursor: pointer;
-  background-color: #fff;
+  background-color: #e2e5e5;
 }
 
 .radio1 h4 {
@@ -169,8 +189,7 @@ input[type="text"] {
   position: absolute;
   font-size: 20px;
   text-shadow: 1px 0px 1px grey;
-  padding-top: 40px;
-  padding-bottom: 20px;
+  margin-top: 30px;
   left: 120px;
 }
 
@@ -183,8 +202,7 @@ input[type="text"] {
   position: absolute;
   text-shadow: 1px 0px 1px grey;
   font-size: 20px;
-  padding-top: 140px;
-  padding-bottom: 20px;
+  margin-top: 110px;
   left: 120px;
 }
 
@@ -197,7 +215,7 @@ input[type="text"] {
   position: absolute;
   text-shadow: 1px 0px 1px grey;
   font-size: 20px;
-  padding-top: 240px;
+  margin-top: 190px;
   padding-bottom: 20px;
   left: 120px;
 }
@@ -211,12 +229,13 @@ input[type="text"] {
   position: absolute;
   text-shadow: 1px 0px 1px grey;
   font-size: 20px;
-  padding-top: 340px;
+  margin-top: 270px;
+  /* padding-top: 340px; */
   padding-bottom: 20px;
   left: 120px;
 }
 
-.radio5 h4 {
+/* .radio5 h4 {
   padding-top: 10px;
   font-size: 20px;
   text-shadow: 1px 0px 1px grey;
@@ -228,15 +247,15 @@ input[type="text"] {
   padding-top: 440px;
   padding-bottom: 20px;
   left: 120px;
-}
+} */
 .msg {
-  padding-top: 640px;
+  margin-top: 550px;
   /* padding-bottom: 30px; */
 }
 .msg div.main {
-  width: 300px;
+  width: 550px;
   position: absolute;
-  left: 270px;
+  left: 390px;
   transform: translate(-50%, -50%);
   vertical-align: left;
 }
@@ -248,13 +267,16 @@ input[type="text"] {
   margin: 10px;
   padding: 0 10px;
   width: auto;
-  background-color: #fff;
-  border-color: #6adbff;
+  background-color: #e2e5e5;
+  border-color: #e2e5e5;
   -webkit-transition: top 0.2s ease-in-out, font-size 0.2s ease-in-out;
   transition: top 0.2s ease-in-out, font-size 0.2s ease-in-out;
 }
 
 .msg .active {
+  border: 1.2px solid black;
+  box-shadow: 0px 0px 8px #000;
+  padding-left: 5px;
   top: -25px;
   font-size: 25px;
   font-weight: 300px;
@@ -262,9 +284,9 @@ input[type="text"] {
   text-transform: uppercase;
 }
 .msg input[type="text"]:focus {
-    border-color: #6adbff;
-    box-shadow: 0px 0px 8px #6adbff;
-  }
+  border-color: #000;
+  box-shadow: 0px 0px 8px #000;
+}
 .msg input[type="text"] {
   height: 150px;
   width: 550px;
@@ -272,16 +294,19 @@ input[type="text"] {
   border: 1.5px solid black;
   font-size: 20px;
   font-weight: 800;
-  background-color: #fff;
+  background-color: #e2e5e5;
   color: black;
 }
 
 .msg input[type="text"]:focus {
   outline: none;
 }
-.btn{
-    margin-top: 90px;
-    margin-left: 10px;
+.btn {
+  margin-top: 90px;
+  margin-left: 6px;
+  width: 50px;
+  height: 40px;
+  font-size: 20px;
 }
 /********** Large devices only **********/
 @media (min-width: 992px) {
