--- a/Prash/css/style.css
+++ b/Prash/css/style.css
@@ -96,6 +96,10 @@ div.main {
   /* transform: translate(-50%, -50%); */
   /* vertical-align: left; */
 }
+div.main div {
+  position: relative;
+  margin: 40px 0;
+}
 
 label.labelbox {
   position: absolute;
@@ -179,10 +183,17 @@ input[type="text"] {
   text-shadow: 1px 0px 1px grey;
   font-size: 1.2em;
 }
-
+div.main.msg1 {
+  box-shadow: 0px 0px 5px #e2e5e5;
+  width: 350px;
+}
+div.main div {
+  position: relative;
+  margin: 40px 0;
+}
 .msg1 label.labelboxmsg {
   position: absolute;
-  /* top: 700; */
+  top: 0;
   font-size: 1.5em;
   margin: 10px;
   margin-top: 40px;
@@ -194,11 +205,11 @@ input[type="text"] {
   transition: top 0.2s ease-in-out, font-size 0.2s ease-in-out;
 }
 
-.msg1 .labelboxmsg.active {
+.msg1 label.labelboxmsg.active {
   border: 1.2px solid black;
   box-shadow: 0px 0px 8px #000;
   padding-left: 5px;
-  top: 310px;
+  top: -25px;
   font-size: 1.5em;
   font-weight: 300px;
   letter-spacing: 2px;
@@ -242,15 +253,14 @@ input[type="text"] {
 
 /********** Medium devices only **********/
 @media (min-width: 992px) and (max-width: 1199px) {
-
-    .navbar-table a {
-        position: absolute;
-        margin-top: 10px;
-        margin-right: 120px;
-    }
-    .container{
-        padding-bottom: 50px;
-    }
+  .navbar-table a {
+    position: absolute;
+    margin-top: 10px;
+    margin-right: 120px;
+  }
+  .container {
+    padding-bottom: 50px;
+  }
   #body-head {
     margin-left: 15px;
     text-align: left;
@@ -259,21 +269,20 @@ input[type="text"] {
     width: 450px;
   }
   .col-sm-12 {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
   }
 }
 
 /********** Small devices only **********/
 @media (min-width: 768px) and (max-width: 991px) {
-
-    .navbar-table a {
-        position: absolute;
-        margin-top: 10px;
-        margin-left: -120px;
-    }
-    .container{
-        padding-bottom: 45px;
-    }
+  .navbar-table a {
+    position: absolute;
+    margin-top: 10px;
+    margin-left: -120px;
+  }
+  .container {
+    padding-bottom: 50px;
+  }
   #body-head {
     text-align: left;
     margin-left: 15px;
@@ -283,51 +292,74 @@ input[type="text"] {
     width: 450px;
   }
   .col-sm-12 {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
   }
 }
 
 /********** Extra small devices only **********/
 @media (max-width: 767px) {
-
-    input[type="text"] {
-        width: 250px;
-      }
-#all .container{
+  input[type="text"] {
+    width: 15em;
+  }
+  #all .container {
     margin-bottom: 10px;
-}
-.container{
+  }
+  .container {
     padding-bottom: 70px;
-}
-.navbar-table a {
+  }
+  .navbar-table a {
     font-size: 1.2em;
     width: 70px;
     height: 35px;
     position: absolute;
     margin-top: 10px;
     margin-left: -90px;
-}
-.navbar-brand h1{
+  }
+  .navbar-brand h1 {
     font-size: 1.5em;
-}
-.navbar-brand p{
+  }
+  .navbar-brand p {
     padding-top: 10px;
-    font-size: .8em;
-}
+    font-size: 0.8em;
+  }
   #body-head {
     margin-left: 15px;
     text-align: left;
-    font-size: 1.4em;
+    font-size: 1.2em;
   }
   .msg1 input[type="text"] {
     width: 16em;
     height: 8em;
   }
-  .msg1 .labelboxmsg.active{
-      top:22.5em;
+  .ms1 label.labelboxmsg {
+    font-size: 0.8em;
+  }
+  .msg1 label.labelboxmsg.active {
+    font-size: 1em;
+  }
+  .radio1 {
+    font-size: 1em;
+  }
+  .radio2 {
+    font-size: 1em;
+  }
+  .radio3 {
+    font-size: 1em;
+  }
+  .radio4 {
+    font-size: 1em;
+  }
+
+  .radio-inline {
+    margin: 0px 0px 0px 0px;
   }
   .col-sm-12 {
     margin-bottom: 20px;
   }
-}
+  label.labelbox {
+    font-size: 1em;
+  }
+  label.labelbox.active {
+    font-size: 0.8em;
+  }
 }
