--- a/Aromatic-Bar/css/style.css
+++ b/Aromatic-Bar/css/style.css
@@ -13,7 +13,7 @@ body {
   border-radius: 5px;
   border-bottom-left-radius: 0px;
   border-bottom-right-radius: 0px;
-  margin-top: 5px;
+  /* margin-top: 5px; */
   padding-bottom: 40px;
   background-image: linear-gradient(#1eb7ff, #2191c5);
   /* background-color: dodgerblue; */
@@ -29,7 +29,7 @@ body {
   /* border: 2px solid #cc3083; */
   padding: 15px;
   margin-top: 0px;
-  margin-bottom: 5px;
+  /* margin-bottom: 5px; */
   /* background-color: #cc3083; */
   box-shadow: 1px 0px 5px #000;
 }
